--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,32 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
-* {
-  box-sizing: border-box;
+@layer base {
+  html,
+  body,
+  #__next {
+    @apply w-full h-full;
+  }
+
+  html {
+    font-family: "Fraunces", serif, sans-serif;
+  }
+
+  body {
+    @apply text-neutral-900 bg-neutral-100;
+  }
+
+  a {
+    @apply relative font-semibold;
+  }
+
+  a::after {
+    content: "";
+
+    @apply absolute inset-0 top-[unset] translate-y-full h-[1px] m-auto bg-black;
+  }
 }
