--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Grape+Nuts&display=swap");
+@import url("https://use.typekit.net/twd1ijz.css");
 @import url("https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css");
 
 @import "tailwindcss/base";
@@ -20,7 +18,7 @@
   }
 
   html {
-    font-family: "Fraunces", serif, sans-serif;
+    font-family: quincy-cf, serif, sans-serif;
   }
 
   body {
